--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "thelounge",
   "description": "The self-hosted Web IRC client",
-  "version": "4.4.3",
+  "version": "4.4.3-mwcfix",
   "preferGlobal": true,
   "bin": {
     "thelounge": "index.js"
