--- a/package.json
+++ b/package.json
@@ -96,7 +96,6 @@
     "@textcomplete/textarea": "0.1.13",
     "@types/bcryptjs": "2.4.6",
     "@types/chai": "4.3.5",
-    "@types/cheerio": "0.22.35",
     "@types/content-disposition": "0.5.8",
     "@types/express": "4.17.21",
     "@types/is-utf8": "0.2.3",
@@ -116,6 +115,7 @@
     "@types/web-push": "3.3.2",
     "@types/webpack-env": "1.16.4",
     "@types/webpack-hot-middleware": "2.25.6",
+    "@types/whatwg-mimetype": "3.0.2",
     "@types/ws": "8.5.12",
     "@typescript-eslint/eslint-plugin": "7.8.0",
     "@typescript-eslint/parser": "7.8.0",
