--- a/package.json
+++ b/package.json
@@ -163,7 +163,7 @@
     "vue-loader": "~17.1.2",
     "vue-router": "~4.5.1",
     "vuex": "^4.1.0",
-    "webpack": "~5.100.2",
+    "webpack": "^5.102.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-middleware": "^7.4.5",
     "webpack-hot-middleware": "^2.26.1"
