--- a/package.json
+++ b/package.json
@@ -117,7 +117,7 @@
     "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
-    "@vue/runtime-dom": "3.2.37",
+    "@vue/runtime-dom": "^3.5.24",
     "@vue/test-utils": "^2.4.6",
     "babel-loader": "^9.2.1",
     "babel-plugin-istanbul": "^7.0.1",
@@ -158,10 +158,10 @@
     "ts-sinon": "^2.0.2",
     "typescript": "~5.4.5",
     "undate": "^0.3.0",
-    "vue": "3.2.37",
+    "vue": "^3.5.24",
     "vue-eslint-parser": "^10.2.0",
-    "vue-loader": "~17.1.2",
-    "vue-router": "~4.5.1",
+    "vue-loader": "^17.4.2",
+    "vue-router": "^4.6.3",
     "vuex": "^4.1.0",
     "webpack": "^5.102.1",
     "webpack-cli": "^6.0.1",
