chore(deps): bump dependencies compatible with Node 22
No code changes required.

Major version upgrades:
- [commander v14](https://github.com/tj/commander.js/releases/tag/v14.0.0)
- [uuid v13](https://github.com/uuidjs/uuid/releases/tag/v13.0.0)

--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
     "@fastify/busboy": "^3.2.0",
     "bcryptjs": "^3.0.3",
     "chalk": "^4.1.2",
-    "cheerio": "~1.0.0",
-    "commander": "^13.1.0",
+    "cheerio": "^1.1.2",
+    "commander": "^14.0.2",
     "content-disposition": "^0.5.4",
     "express": "^5.1.0",
     "file-type": "^16.5.4",
@@ -80,7 +80,7 @@
     "socket.io": "^4.8.1",
     "tlds": "^1.261.0",
     "ua-parser-js": "^2.0.6",
-    "uuid": "^11.1.0",
+    "uuid": "^13.0.0",
     "web-push": "^3.6.7",
     "yarn": "^1.22.22"
   },
@@ -95,7 +95,7 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@textcomplete/core": "^0.1.13",
     "@textcomplete/textarea": "^0.1.13",
-    "@types/chai": "^4.3.20",
+    "@types/chai": "^5.2.3",
     "@types/content-disposition": "^0.5.9",
     "@types/express": "^5.0.5",
     "@types/is-utf8": "^0.2.3",
@@ -118,14 +118,14 @@
     "@typescript-eslint/parser": "^7.18.0",
     "@vue/runtime-dom": "^3.5.24",
     "@vue/test-utils": "^2.4.6",
-    "babel-loader": "^9.2.1",
+    "babel-loader": "^10.0.0",
     "babel-plugin-istanbul": "^7.0.1",
     "babel-preset-typescript-vue3": "~2.0.17",
-    "chai": "^4.5.0",
+    "chai": "^6.2.1",
     "copy-webpack-plugin": "^13.0.1",
-    "cross-env": "^7.0.3",
+    "cross-env": "^10.1.0",
     "css-loader": "^7.1.2",
-    "cssnano": "^6.1.2",
+    "cssnano": "^7.1.2",
     "dayjs": "^1.11.19",
     "emoji-regex": "^10.6.0",
     "eslint": "^8.57.1",
@@ -138,7 +138,7 @@
     "mocha": "^11.7.4",
     "mousetrap": "^1.6.5",
     "normalize.css": "^8.0.1",
-    "npm-run-all2": "^7.0.2",
+    "npm-run-all2": "^8.0.4",
     "nyc": "^17.1.0",
     "postcss": "^8.5.6",
     "postcss-import": "^16.1.1",
