--- a/package.json
+++ b/package.json
@@ -141,8 +141,8 @@
     "postcss-import": "^16.1.1",
     "postcss-loader": "^8.2.0",
     "postcss-preset-env": "^10.4.0",
-    "prettier": "~2.7.1",
-    "pretty-quick": "^3.3.1",
+    "prettier": "^3.6.2",
+    "pretty-quick": "^4.2.2",
     "primer-tooltips": "^2.0.0",
     "sinon": "^21.0.0",
     "socket.io-client": "^4.8.1",
