--- a/package.json
+++ b/package.json
@@ -152,7 +152,7 @@
     "ts-loader": "^9.5.4",
     "ts-node": "^10.9.2",
     "ts-sinon": "^2.0.2",
-    "typescript": "~5.4.5",
+    "typescript": "^5.9.3",
     "undate": "^0.3.0",
     "vue": "^3.5.24",
     "vue-eslint-parser": "^10.2.0",
