chore(deps): update ESLint to v9
Using `FlatCompat` for the new configuration file.
See <https://www.npmjs.com/package/@eslint/eslintrc>.

Using ESM config (eslint/eslint#17909). This minimal update ensures
the config file keeps its history even after being renamed.

Fixed some `no-unused-vars`.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "dev": "cross-env NODE_ENV=development ts-node --project server/tsconfig.json server/index.ts start --dev",
     "format:prettier": "prettier --write \"**/*.*\"",
     "generate:config:doc": "ts-node scripts/generate-config-doc.js",
-    "lint:check-eslint": "eslint-config-prettier .eslintrc.cjs",
     "lint:eslint": "eslint . --report-unused-disable-directives --color",
     "lint:prettier": "prettier --list-different \"**/*.*\"",
     "lint:stylelint": "stylelint --color \"client/**/*.css\"",
@@ -90,12 +89,15 @@
     "@babel/core": "^7.28.5",
     "@babel/plugin-transform-runtime": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.39.1",
     "@fortawesome/fontawesome-free": "^7.1.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@textcomplete/core": "^0.1.13",
     "@textcomplete/textarea": "^0.1.13",
     "@types/chai": "^5.2.3",
     "@types/content-disposition": "^0.5.9",
+    "@types/eslint": "^9.6.1",
     "@types/express": "^5.0.5",
     "@types/ldapjs": "^2.2.5",
     "@types/linkify-it": "^5.0.0",
@@ -125,7 +127,7 @@
     "cssnano": "^7.1.2",
     "dayjs": "^1.11.19",
     "emoji-regex": "^10.6.0",
-    "eslint": "^8.57.1",
+    "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-define-config": "^2.1.0",
     "eslint-plugin-vue": "^10.5.1",
