--- a/package.json
+++ b/package.json
@@ -89,7 +89,6 @@
     "@babel/core": "^7.28.5",
     "@babel/plugin-transform-runtime": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
-    "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.39.1",
     "@fortawesome/fontawesome-free": "^7.1.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
@@ -113,8 +112,6 @@
     "@types/webpack-env": "^1.18.8",
     "@types/webpack-hot-middleware": "^2.25.12",
     "@types/ws": "^8.18.1",
-    "@typescript-eslint/eslint-plugin": "^8.46.4",
-    "@typescript-eslint/parser": "^8.46.4",
     "@vue/runtime-dom": "^3.5.24",
     "@vue/test-utils": "^2.4.6",
     "babel-loader": "^10.0.0",
@@ -129,10 +126,10 @@
     "emoji-regex": "^10.6.0",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-define-config": "^2.1.0",
     "eslint-plugin-vue": "^10.5.1",
     "fork-ts-checker-webpack-plugin": "^9.1.0",
     "fuzzy": "^0.1.3",
+    "globals": "^16.5.0",
     "mini-css-extract-plugin": "^2.9.4",
     "mocha": "^11.7.4",
     "mousetrap": "^1.6.5",
@@ -155,6 +152,7 @@
     "ts-node": "^10.9.2",
     "ts-sinon": "^2.0.2",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.4",
     "undate": "^0.3.0",
     "vue": "^3.5.24",
     "vue-eslint-parser": "^10.2.0",
