--- a/package.json
+++ b/package.json
@@ -55,119 +55,119 @@
     "./public/**"
   ],
   "dependencies": {
-    "@fastify/busboy": "1.0.0",
-    "bcryptjs": "2.4.3",
-    "chalk": "4.1.2",
-    "cheerio": "1.0.0",
-    "commander": "9.0.0",
-    "content-disposition": "0.5.4",
-    "express": "4.20.0",
-    "file-type": "16.5.4",
-    "filenamify": "4.3.0",
-    "got": "11.8.6",
-    "irc-framework": "4.14.0",
-    "is-utf8": "0.2.1",
-    "ldapjs": "2.3.3",
-    "linkify-it": "3.0.3",
-    "lodash": "4.17.21",
-    "mime-types": "2.1.35",
-    "node-forge": "1.3.1",
-    "package-json": "7.0.0",
-    "read": "1.0.7",
-    "read-chunk": "3.2.0",
-    "semver": "7.5.2",
-    "socket.io": "4.6.2",
-    "tlds": "1.228.0",
-    "ua-parser-js": "1.0.39",
-    "uuid": "8.3.2",
-    "web-push": "3.4.5",
-    "yarn": "1.22.22"
+    "@fastify/busboy": "^1.0.0",
+    "bcryptjs": "^2.4.3",
+    "chalk": "^4.1.2",
+    "cheerio": "~1.0.0",
+    "commander": "^9.0.0",
+    "content-disposition": "^0.5.4",
+    "express": "^4.20.0",
+    "file-type": "^16.5.4",
+    "filenamify": "^4.3.0",
+    "got": "^11.8.6",
+    "irc-framework": "^4.14.0",
+    "is-utf8": "^0.2.1",
+    "ldapjs": "^2.3.3",
+    "linkify-it": "^3.0.3",
+    "lodash": "^4.17.21",
+    "mime-types": "^2.1.35",
+    "node-forge": "^1.3.1",
+    "package-json": "^7.0.0",
+    "read": "^1.0.7",
+    "read-chunk": "^3.2.0",
+    "semver": "^7.5.2",
+    "socket.io": "^4.6.2",
+    "tlds": "^1.228.0",
+    "ua-parser-js": "^1.0.39",
+    "uuid": "^8.3.2",
+    "web-push": "^3.4.5",
+    "yarn": "^1.22.22"
   },
   "optionalDependencies": {
-    "sqlite3": "5.1.7"
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "@babel/core": "7.17.10",
-    "@babel/plugin-transform-runtime": "7.18.2",
-    "@babel/preset-env": "7.17.10",
-    "@fortawesome/fontawesome-free": "5.15.4",
-    "@istanbuljs/nyc-config-typescript": "1.0.2",
-    "@textcomplete/core": "0.1.10",
-    "@textcomplete/textarea": "0.1.13",
-    "@types/bcryptjs": "2.4.6",
-    "@types/chai": "4.3.5",
-    "@types/cheerio": "0.22.35",
-    "@types/content-disposition": "0.5.8",
-    "@types/express": "4.17.21",
-    "@types/is-utf8": "0.2.3",
-    "@types/ldapjs": "2.2.5",
-    "@types/linkify-it": "3.0.5",
-    "@types/lodash": "4.14.202",
-    "@types/mime-types": "2.1.4",
-    "@types/mocha": "9.1.1",
-    "@types/mousetrap": "1.6.15",
-    "@types/node": "17.0.45",
-    "@types/read": "0.0.32",
-    "@types/semver": "7.3.9",
-    "@types/sortablejs": "1.15.8",
-    "@types/sqlite3": "3.1.11",
-    "@types/ua-parser-js": "0.7.39",
-    "@types/uuid": "8.3.4",
-    "@types/web-push": "3.3.2",
-    "@types/webpack-env": "1.16.4",
-    "@types/webpack-hot-middleware": "2.25.6",
-    "@types/ws": "8.5.12",
-    "@typescript-eslint/eslint-plugin": "7.8.0",
-    "@typescript-eslint/parser": "7.8.0",
+    "@babel/core": "^7.17.10",
+    "@babel/plugin-transform-runtime": "^7.18.2",
+    "@babel/preset-env": "^7.17.10",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
+    "@textcomplete/core": "^0.1.10",
+    "@textcomplete/textarea": "^0.1.13",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/chai": "^4.3.5",
+    "@types/cheerio": "^0.22.35",
+    "@types/content-disposition": "^0.5.8",
+    "@types/express": "^4.17.21",
+    "@types/is-utf8": "^0.2.3",
+    "@types/ldapjs": "^2.2.5",
+    "@types/linkify-it": "^3.0.5",
+    "@types/lodash": "^4.14.202",
+    "@types/mime-types": "^2.1.4",
+    "@types/mocha": "^9.1.1",
+    "@types/mousetrap": "^1.6.15",
+    "@types/node": "^17.0.45",
+    "@types/read": "^0.0.32",
+    "@types/semver": "^7.3.9",
+    "@types/sortablejs": "^1.15.8",
+    "@types/sqlite3": "^3.1.11",
+    "@types/ua-parser-js": "^0.7.39",
+    "@types/uuid": "^8.3.4",
+    "@types/web-push": "^3.3.2",
+    "@types/webpack-env": "^1.16.4",
+    "@types/webpack-hot-middleware": "^2.25.6",
+    "@types/ws": "^8.5.12",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
     "@vue/runtime-dom": "3.2.33",
-    "@vue/test-utils": "2.4.6",
-    "babel-loader": "8.2.5",
-    "babel-plugin-istanbul": "6.1.1",
-    "babel-preset-typescript-vue3": "2.0.17",
-    "chai": "4.3.7",
-    "copy-webpack-plugin": "10.2.4",
-    "cross-env": "7.0.3",
-    "css-loader": "6.5.1",
-    "cssnano": "5.0.17",
-    "dayjs": "1.10.8",
-    "emoji-regex": "10.2.1",
-    "eslint": "8.57.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-define-config": "2.1.0",
-    "eslint-plugin-vue": "9.25.0",
-    "fork-ts-checker-webpack-plugin": "7.2.13",
-    "fuzzy": "0.1.3",
-    "mini-css-extract-plugin": "2.5.3",
-    "mocha": "9.2.2",
-    "mousetrap": "1.6.5",
-    "normalize.css": "8.0.1",
-    "npm-run-all": "4.1.5",
-    "nyc": "15.1.0",
-    "postcss": "8.4.47",
-    "postcss-import": "14.0.2",
-    "postcss-loader": "6.2.1",
-    "postcss-preset-env": "7.3.0",
-    "prettier": "2.5.1",
-    "pretty-quick": "3.1.3",
-    "primer-tooltips": "2.0.0",
-    "sinon": "13.0.2",
-    "socket.io-client": "4.5.0",
-    "sortablejs": "1.15.2",
-    "stylelint": "14.3.0",
-    "stylelint-config-standard": "24.0.0",
-    "ts-loader": "9.3.0",
-    "ts-node": "10.7.0",
-    "ts-sinon": "2.0.2",
-    "typescript": "5.4.5",
-    "undate": "0.3.0",
+    "@vue/test-utils": "^2.4.6",
+    "babel-loader": "^8.2.5",
+    "babel-plugin-istanbul": "^6.1.1",
+    "babel-preset-typescript-vue3": "~2.0.17",
+    "chai": "^4.3.7",
+    "copy-webpack-plugin": "^10.2.4",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.5.1",
+    "cssnano": "^5.0.17",
+    "dayjs": "^1.10.8",
+    "emoji-regex": "^10.2.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-define-config": "^2.1.0",
+    "eslint-plugin-vue": "^9.25.0",
+    "fork-ts-checker-webpack-plugin": "^7.2.13",
+    "fuzzy": "^0.1.3",
+    "mini-css-extract-plugin": "^2.5.3",
+    "mocha": "^9.2.2",
+    "mousetrap": "^1.6.5",
+    "normalize.css": "^8.0.1",
+    "npm-run-all": "^4.1.5",
+    "nyc": "^15.1.0",
+    "postcss": "^8.4.47",
+    "postcss-import": "^14.0.2",
+    "postcss-loader": "^6.2.1",
+    "postcss-preset-env": "^7.3.0",
+    "prettier": "~2.5.1",
+    "pretty-quick": "^3.1.3",
+    "primer-tooltips": "^2.0.0",
+    "sinon": "^13.0.2",
+    "socket.io-client": "^4.5.0",
+    "sortablejs": "^1.15.2",
+    "stylelint": "^14.3.0",
+    "stylelint-config-standard": "^24.0.0",
+    "ts-loader": "^9.3.0",
+    "ts-node": "^10.7.0",
+    "ts-sinon": "^2.0.2",
+    "typescript": "~5.4.5",
+    "undate": "^0.3.0",
     "vue": "3.2.35",
-    "vue-eslint-parser": "9.4.3",
-    "vue-loader": "17.0.1",
-    "vue-router": "4.0.15",
-    "vuex": "4.0.2",
-    "webpack": "5.94.0",
-    "webpack-cli": "4.9.2",
-    "webpack-dev-middleware": "5.3.4",
-    "webpack-hot-middleware": "2.25.4"
+    "vue-eslint-parser": "^9.4.3",
+    "vue-loader": "~17.0.1",
+    "vue-router": "~4.0.15",
+    "vuex": "^4.0.2",
+    "webpack": "~5.94.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-middleware": "^5.3.4",
+    "webpack-hot-middleware": "^2.25.4"
   }
 }
